samples/_failures_safe/1761289679_c9a0b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2d3e97c.c: In function ‘main’:
./samples/SAFE/__tmp_d2d3e97c.c:145:5: error: expected declaration or statement at end of input
  145 |     printf("Decompressed data (%zu bytes):\n", decompressed_size);
      |     ^~~~~~
